--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -12,10 +12,7 @@
     </style>
   </head>
   <body>
-    <script type="text/javascript" src="js/ejs_production.js"></script>
-    <script src="js/socket.io-1.2.0.js"></script>
-    <script src="js/jquery-1.11.1.js"></script>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"> 
+    <link rel="stylesheet" href="css/bootstrap.min.css"> 
     <%- body %>
   </body>
 </html>
